[package]
name = "kyaung-os"
version = "0.1.0"
edition = "2021"
authors = ["Aung Tay Zar Maung aungtayzarmaung@gmail.com"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
